--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Signed APK Builder
+      uses: TeamNecta/build-signed-apk@v2.1
+      with:
+        keystore_b64: ${{ secrets.keystore }}
+        keystore_password: ${{ secrets.keystore_password }}
+        key_alias: ${{ secrets.key_alias }}
+        key_password: ${{ secrets.key_password }}
+
     - name: Setup and build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
