--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Signed APK Builder
-      uses: santarl/build-signed-apk:main
+      uses: santarl/build-signed-apk@ain
       with:
         keystore_b64: ${{ secrets.keystore }}
         keystore_password: ${{ secrets.keystore_password }}
