--- a/.github/workflows/build-signed-apk.yml
+++ b/.github/workflows/build-signed-apk.yml
@@ -13,17 +13,21 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - shell: bash
+    - name: Set-up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Decode Keystore
+      shell: bash
       run: echo "${{ inputs.keystore_b64 }}" | base64 -d > $GITHUB_WORKSPACE/Infinity.jks
       if: inputs.keystore_b64
 
-    - name: Signed APK Builder
-      uses: santarl/build-signed-apk@main
-      with:
-        keystore_b64: ${{ secrets.keystore }}
-        keystore_password: ${{ secrets.keystore_password }}
-        key_alias: ${{ secrets.key_alias }}
-        key_password: ${{ secrets.key_password }}
+    - name: Build
+      shell: bash
+      run: ./gradlew updateLintBaseline
+      run: ./gradlew assembleRelease
 
     - name: Upload apk
       uses: actions/upload-artifact@v3
