--- a/.github/workflows/build-signed-apk.yml
+++ b/.github/workflows/build-signed-apk.yml
@@ -24,9 +24,12 @@ jobs:
       run: echo "${{ inputs.keystore_b64 }}" | base64 -d > $GITHUB_WORKSPACE/Infinity.jks
       if: inputs.keystore_b64
 
-    - name: Build
+    - name: updateLintBaseline
       shell: bash
       run: ./gradlew updateLintBaseline
+
+    - name: Build
+      shell: bash
       run: ./gradlew assembleRelease
 
     - name: Upload apk
