workflow: upload only apk

--- a/.github/workflows/build-signed-apk.yml
+++ b/.github/workflows/build-signed-apk.yml
@@ -31,5 +31,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Infinity-${{github.sha}}
-        path: app/build/outputs/apk/
+        path: app/build/outputs/apk/release/app-release.apk
         if-no-files-found: error
