--- a/.github/workflows/build-signed-apk.yml
+++ b/.github/workflows/build-signed-apk.yml
@@ -27,8 +27,20 @@ jobs:
       shell: bash
       run: ./gradlew assembleRelease
 
-    - name: Upload apk
-      uses: actions/upload-artifact@v3
+    - name: Upload files to Telegram
+      uses: xz-dev/TelegramFileUploader@v1
+      with:
+        to-who: '-4267241570'
+        message: 'infinity build'
+        files: |
+        app/build/outputs/apk/release/app-release.apk
+      env:
+        API_ID: ${{ secrets.TG_API_ID }}
+        API_HASH: ${{ secrets.TG_API_HASH }}
+        BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
       with:
         name: Infinity-${{github.sha}}
         path: app/build/outputs/apk/release/app-release.apk
